--- a/task-5-enforcing-coding-style/.github/workflows/ci.yml
+++ b/task-5-enforcing-coding-style/.github/workflows/ci.yml
@@ -2,97 +2,89 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  code-quality:
-    name: Code Quality Checks
+  lint:
+    name: ESLint
     runs-on: ubuntu-latest
-    
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Run ESLint
-      run: npm run lint
-    
-    - name: Check Prettier formatting
-      run: npm run format:check
-    
-    - name: Build TypeScript
-      run: npm run build
-    
-    - name: Run tests (when available)
-      run: npm test || echo "No tests available yet"
-      continue-on-error: true
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  security-scan:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    needs: code-quality
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Run security audit
-      run: npm audit --audit-level=moderate
-      continue-on-error: true
-    
-    - name: Check for outdated packages
-      run: npm outdated || true
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-  build-and-test:
-    name: Build and Test
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run ESLint
+        run: npm run lint
+
+  format:
+    name: Prettier Check
     runs-on: ubuntu-latest
-    needs: [code-quality, security-scan]
-    
+    needs: lint
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build application
-      run: npm run build
-    
-    - name: Test application startup
-      run: |
-        timeout 5s npm start || if [[ $? == 124 ]]; then echo "App started successfully"; else exit 1; fi
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: build-files
-        path: dist/
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Check Prettier formatting
+        run: npm run format:check
+
+  build:
+    name: Build Project
+    runs-on: ubuntu-latest
+    needs: [lint, format]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build TypeScript
+        run: npm run build
+
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
