refactor: update aarticles

--- a/task-7-blog-api/package.json
+++ b/task-7-blog-api/package.json
@@ -4,7 +4,7 @@
   "description": "NestJS Blog API with Prisma and SQLite",
   "author": "Ugwu Kasie",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -78,5 +78,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
